--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
                         <p class="questrial fs-7 p-0 m-0 px-1">OR</p>
                         <a class="raleway-bold fs-7 text-decoration-none text-black hoverItem" href="#">REGISTER</a>
                     </div>
-                    <div class="dropdown py-2 px-4 m-0 border-end d-flex align-items-center">
-                        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <div class="dropdown raleway-bold py-2 px-4 m-0 border-end d-flex align-items-center">
+                        <a class="btn border-0 dropdown-toggle hoverItem fs-9" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             EN
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item hoverItem" href="#">FR</a></li>
-                            <li><a class="dropdown-item hoverItem" href="#">RU</a></li>
-                            <li><a class="dropdown-item hoverItem" href="#">IT</a></li>
-                            <li><a class="dropdown-item hoverItem" href="#">IT</a></li>
+                            <li><a class="dropdown-item hoverItem fs-9" href="#">FR</a></li>
+                            <li><a class="dropdown-item hoverItem fs-9" href="#">RU</a></li>
+                            <li><a class="dropdown-item hoverItem fs-9" href="#">IT</a></li>
+                            <li><a class="dropdown-item hoverItem fs-9" href="#">SP</a></li>
                         </ul>
                     </div>
                     <!--<p class="py-2 px-4 m-0 border-end d-flex align-items-center">EN</p>-->
@@ -160,12 +160,12 @@
                     <div class="accordion" id="accordion2">
                         <div class="accordion-item border-top-0 border-start-0 border-end-0">
                             <h2 class="accordion-header">
-                                <button aria-controls="collapseOCOne" aria-expanded="true" class="accordion-button px-0"
+                                <button aria-controls="collapseOCOne" aria-expanded="false" class="accordion-button collapsed px-0"
                                         data-bs-target="#collapseOCOne" data-bs-toggle="collapse" type="button">
                                     LAPTOPS & COMPUTERS
                                 </button>
                             </h2>
-                            <div class="accordion-collapse collapse show" data-bs-parent="#accordionExample"
+                            <div class="accordion-collapse collapse" data-bs-parent="#accordionExample"
                                  id="collapseOCOne">
                                 <div class="accordion-body d-flex flex-column">
                                     <a href="#">LAPTOPS</a>
@@ -454,12 +454,12 @@
                     <div class="accordion" id="accordion1">
                         <div class="accordion-item border-top-0 border-start-0 border-end-0">
                             <h2 class="accordion-header">
-                                <button aria-controls="collapseOne" aria-expanded="true" class="accordion-button px-0"
+                                <button aria-controls="collapseOne" aria-expanded="false" class="accordion-button collapsed px-0"
                                         data-bs-target="#collapseOne" data-bs-toggle="collapse" type="button">
                                     LAPTOPS & COMPUTERS
                                 </button>
                             </h2>
-                            <div class="accordion-collapse collapse show" data-bs-parent="#accordionExample"
+                            <div class="accordion-collapse collapse" data-bs-parent="#accordionExample"
                                  id="collapseOne">
                                 <div class="accordion-body d-flex flex-column">
                                     <a href="#">LAPTOPS</a>
@@ -751,22 +751,22 @@
                                     type="button"></button>
                         </div>
                         <div class="carousel-inner rounded-4">
-                            <div class="carousel-item m-0 p-0 active">
-                                <img alt="best sport gadget 1" class="w-100" src="./img/carroussel1.png">
+                            <div class="carousel-item active">
+                                <img alt="best sport gadget 1" class="d-block w-100" src="./img/carroussel1.png">
                                 <div class="carousel-caption d-none d-xxl-block">
                                     <p class="questrial fs-10 m-0">DON'T MISS!</p>
                                     <p class="questrial fs-13 textColor1">UP TO 70%</p>
                                     <p class="raleway-heavy fs-12">BEST SPORT GADGET</p>
-                                    <a class="btn btn-primary text-decoration-none" href="#">LEARN MORE</a>
+                                    <a class="btn btn-light text-decoration-none" href="#">LEARN MORE</a>
                                 </div>
                             </div>
-                            <div class="carousel-item position-relative">
+                            <div class="carousel-item">
                                 <img alt="best sport gadget 2" class="d-block w-100" src="./img/carroussel2.png">
-                                <div class="carousel-caption">
+                                <div class="carousel-caption d-none d-xxl-block">
                                     <p class="questrial fs-10 m-0">DON'T MISS!</p>
                                     <p class="questrial fs-13 textColor1">UP TO 70%</p>
                                     <p class="raleway-heavy fs-12">BEST SPORT GADGET</p>
-                                    <a class="btn btn-primary text-decoration-none" href="#">LEARN MORE</a>
+                                    <a class="btn btn-light text-decoration-none" href="#">LEARN MORE</a>
                                 </div>
                             </div>
                         </div>
