--- a/index.html
+++ b/index.html
@@ -811,7 +811,7 @@
                                 </div>
                                 <div class="cardButtonsLarge d-flex flex-column">
                                     <a class="raleway-bold fs-9 btn normalButton rounded-pill mb-3" href="#">Buy Now</a>
-                                    <a class="raleway-bold fs-9 btn normalButton rounded-pill" href="#">Details</a>
+                                    <a class="raleway-bold fs-9 btn blackButton rounded-pill" href="#">Details</a>
                                 </div>
                             </article>
                             <article class="card border-start-0 border-top-0 border-bottom-0 rounded-0 mb-5">
@@ -825,7 +825,7 @@
                                 </div>
                                 <div class="cardButtonsLarge d-flex flex-column">
                                     <a class="raleway-bold fs-9 btn normalButton rounded-pill mb-3" href="#">Buy Now</a>
-                                    <a class="raleway-bold fs-9 btn normalButton rounded-pill" href="#">Details</a>
+                                    <a class="raleway-bold fs-9 btn blackButton rounded-pill" href="#">Details</a>
                                 </div>
                             </article>
                             <article class="card border-start-0 border-top-0 border-bottom-0 rounded-0">
@@ -839,7 +839,7 @@
                                 </div>
                                 <div class="cardButtonsLarge d-flex flex-column">
                                     <a class="raleway-bold fs-9 btn normalButton rounded-pill mb-3" href="#">Buy Now</a>
-                                    <a class="raleway-bold fs-9 btn normalButton rounded-pill" href="#">Details</a>
+                                    <a class="raleway-bold fs-9 btn blackButton rounded-pill" href="#">Details</a>
                                 </div>
                             </article>
                         </div>
@@ -855,7 +855,7 @@
                                 </div>
                                 <div class="cardButtonsLarge d-flex flex-column">
                                     <a class="raleway-bold fs-9 btn normalButton rounded-pill mb-3" href="#">Buy Now</a>
-                                    <a class="raleway-bold fs-9 btn normalButton rounded-pill" href="#">Details</a>
+                                    <a class="raleway-bold fs-9 btn blackButton rounded-pill" href="#">Details</a>
                                 </div>
                             </article>
                             <article class="card border-start-0 border-top-0 border-bottom-0 rounded-0 mt-5">
@@ -869,7 +869,7 @@
                                 </div>
                                 <div class="cardButtonsLarge d-flex flex-column">
                                     <a class="raleway-bold fs-9 btn normalButton rounded-pill mb-3" href="#">Buy Now</a>
-                                    <a class="raleway-bold fs-9 btn normalButton rounded-pill" href="#">Details</a>
+                                    <a class="raleway-bold fs-9 btn blackButton rounded-pill" href="#">Details</a>
                                 </div>
                             </article>
                             <article class="card border-start-0 border-top-0 border-bottom-0 rounded-0 mt-5">
@@ -883,7 +883,7 @@
                                 </div>
                                 <div class="cardButtonsLarge d-flex flex-column">
                                     <a class="raleway-bold fs-9 btn normalButton rounded-pill mb-3" href="#">Buy Now</a>
-                                    <a class="raleway-bold fs-9 btn normalButton rounded-pill" href="#">Details</a>
+                                    <a class="raleway-bold fs-9 btn blackButton rounded-pill" href="#">Details</a>
                                 </div>
                             </article>
                         </div>
@@ -899,7 +899,7 @@
                                 </div>
                                 <div class="cardButtonsLarge d-flex flex-column">
                                     <a class="raleway-bold fs-9 btn normalButton rounded-pill mb-3" href="#">Buy Now</a>
-                                    <a class="raleway-bold fs-9 btn normalButton rounded-pill" href="#">Details</a>
+                                    <a class="raleway-bold fs-9 btn blackButton rounded-pill" href="#">Details</a>
                                 </div>
                             </article>
                             <article class="card border-start-0 border-top-0 border-bottom-0 rounded-0 mt-5">
@@ -913,7 +913,7 @@
                                 </div>
                                 <div class="cardButtonsLarge d-flex flex-column">
                                     <a class="raleway-bold fs-9 btn normalButton rounded-pill mb-3" href="#">Buy Now</a>
-                                    <a class="raleway-bold fs-9 btn normalButton rounded-pill" href="#">Details</a>
+                                    <a class="raleway-bold fs-9 btn blackButton rounded-pill" href="#">Details</a>
                                 </div>
                             </article>
                             <article class="card border-start-0 border-top-0 border-bottom-0 rounded-0 mt-5">
@@ -927,29 +927,29 @@
                                 </div>
                                 <div class="cardButtonsLarge d-flex flex-column">
                                     <a class="raleway-bold fs-9 btn normalButton rounded-pill mb-3" href="#">Buy Now</a>
-                                    <a class="raleway-bold fs-9 btn normalButton rounded-pill" href="#">Details</a>
+                                    <a class="raleway-bold fs-9 btn blackButton rounded-pill" href="#">Details</a>
                                 </div>
                             </article>
                         </div>
                     </div>
-                    <div class="row">
+                    <article class="row">
                         <div class="col-12 d-flex my-5">
-                            <div class="col-lg-4 d-none d-lg-flex justify-content-start">
-                                <button class="btn btn-light">PREV PAGE</button>
+                            <div class="col-lg-3 d-none d-lg-flex justify-content-start">
+                                <button class="raleway-bold fs-8 btn whiteButton rounded-pill border border-1 p-3">PREV PAGE</button>
                             </div>
-                            <div class="col-12 col-lg-4 d-flex justify-content-center">
-                                <button class="btn btn-light mx-1">1</button>
-                                <button class="btn btn-light mx-1">2</button>
-                                <button class="btn btn-light mx-1">3</button>
-                                <button class="btn btn-light mx-1">4</button>
-                                <p class="mx-1">...</p>
-                                <button class="btn btn-light mx-1">23</button>
+                            <div class="col-12 col-lg-6 d-flex justify-content-center">
+                                <button class="raleway-bold fs-8 btn whiteButton border border-1 backgroundColor1 text-white mx-1 p-3">1</button>
+                                <button class="raleway-bold fs-8 btn whiteButton border border-1 mx-1 p-3">2</button>
+                                <button class="raleway-bold fs-8 btn whiteButton border border-1 mx-1 p-3">3</button>
+                                <button class="raleway-bold fs-8 btn whiteButton border border-1 mx-1 p-3">4</button>
+                                <p class="raleway-bold fs-8 d-flex align-items-center m-0 mx-1 p-3">...</p>
+                                <button class="raleway-bold fs-8 btn whiteButton border border-1 mx-1 p-3">23</button>
                             </div>
-                            <div class="col-lg-4 d-none d-lg-flex justify-content-end">
-                                <button class="btn btn-light">NEXT PAGE</button>
+                            <div class="col-lg-3 d-none d-lg-flex justify-content-end">
+                                <button class="raleway-bold fs-8 btn whiteButton rounded-pill border border-1 p-3">NEXT PAGE</button>
                             </div>
                         </div>
-                    </div>
+                    </article>
                 </section>
             </section>
             <section id="sectionSmallProducts">
@@ -968,7 +968,7 @@
                                 </div>
                             </div>
                             <div class="cardButtonSmall">
-                                <a class="raleway-bold fs-9 btn normalButton rounded-pill px-4" href="#">Details</a>
+                                <a class="raleway-bold fs-9 btn normalButton rounded-pill px-4" href="#">Visit Page</a>
                             </div>
                         </div>
                         <div class="card border border-0 my-2">
@@ -983,7 +983,7 @@
                                 </div>
                             </div>
                             <div class="cardButtonSmall d-flex">
-                                <a class="raleway-bold fs-9 btn normalButton rounded-pill px-4" href="#">Details</a>
+                                <a class="raleway-bold fs-9 btn normalButton rounded-pill px-4" href="#">Visit Page</a>
                             </div>
                         </div>
                         <div class="card border border-0 my-2">
@@ -998,7 +998,7 @@
                                 </div>
                             </div>
                             <div class="cardButtonSmall d-flex">
-                                <a class="raleway-bold fs-9 btn normalButton rounded-pill px-4" href="#">Details</a>
+                                <a class="raleway-bold fs-9 btn normalButton rounded-pill px-4" href="#">Visit Page</a>
                             </div>
                         </div>
                     </article>
@@ -1016,7 +1016,7 @@
                                 </div>
                             </div>
                             <div class="cardButtonSmall">
-                                <a class="raleway-bold fs-9 btn normalButton rounded-pill px-4" href="#">Details</a>
+                                <a class="raleway-bold fs-9 btn normalButton rounded-pill px-4" href="#">Visit Page</a>
                             </div>
                         </div>
                         <div class="card border border-0 my-2">
@@ -1031,7 +1031,7 @@
                                 </div>
                             </div>
                             <div class="cardButtonSmall">
-                                <a class="raleway-bold fs-9 btn normalButton rounded-pill px-4" href="#">Details</a>
+                                <a class="raleway-bold fs-9 btn normalButton rounded-pill px-4" href="#">Visit Page</a>
                             </div>
                         </div>
                         <div class="card border border-0 my-2">
@@ -1046,7 +1046,7 @@
                                 </div>
                             </div>
                             <div class="cardButtonSmall">
-                                <a class="raleway-bold fs-9 btn normalButton rounded-pill px-4" href="#">Details</a>
+                                <a class="raleway-bold fs-9 btn normalButton rounded-pill px-4" href="#">Visit Page</a>
                             </div>
                         </div>
                     </article>
@@ -1064,7 +1064,7 @@
                                 </div>
                             </div>
                             <div class="cardButtonSmall">
-                                <a class="raleway-bold fs-9 btn normalButton rounded-pill px-4" href="#">Details</a>
+                                <a class="raleway-bold fs-9 btn normalButton rounded-pill px-4" href="#">Visit Page</a>
                             </div>
                         </div>
                         <div class="card border border-0 my-2">
@@ -1079,7 +1079,7 @@
                                 </div>
                             </div>
                             <div class="cardButtonSmall">
-                                <a class="raleway-bold fs-9 btn normalButton rounded-pill px-4" href="#">Details</a>
+                                <a class="raleway-bold fs-9 btn normalButton rounded-pill px-4" href="#">Visit Page</a>
                             </div>
                         </div>
                         <div class="card border border-0 my-2">
@@ -1094,7 +1094,7 @@
                                 </div>
                             </div>
                             <div class="cardButtonSmall">
-                                <a class="raleway-bold fs-9 btn normalButton rounded-pill px-4" href="#">Details</a>
+                                <a class="raleway-bold fs-9 btn normalButton rounded-pill px-4" href="#">Visit Page</a>
                             </div>
                         </div>
                     </article>
@@ -1112,7 +1112,7 @@
                                 </div>
                             </div>
                             <div class="cardButtonSmall">
-                                <a class="raleway-bold fs-9 btn normalButton rounded-pill px-4" href="#">Details</a>
+                                <a class="raleway-bold fs-9 btn normalButton rounded-pill px-4" href="#">Visit Page</a>
                             </div>
                         </div>
                         <div class="card border border-0 my-2">
@@ -1127,7 +1127,7 @@
                                 </div>
                             </div>
                             <div class="cardButtonSmall">
-                                <a class="raleway-bold fs-9 btn normalButton rounded-pill px-4" href="#">Details</a>
+                                <a class="raleway-bold fs-9 btn normalButton rounded-pill px-4" href="#">Visit Page</a>
                             </div>
                         </div>
                         <div class="card border border-0 my-2">
@@ -1142,7 +1142,7 @@
                                 </div>
                             </div>
                             <div class="cardButtonSmall">
-                                <a class="raleway-bold fs-9 btn normalButton rounded-pill px-4" href="#">Details</a>
+                                <a class="raleway-bold fs-9 btn normalButton rounded-pill px-4" href="#">Visit Page</a>
                             </div>
                         </div>
                     </article>
